--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,87 @@
-@import url('https://fonts.googleapis.com/css?family=Acme|Open+Sans:300,400,400i,600,700|Roboto:300,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Acme|Open+Sans:300,400,400i,600,700|Lato:400,700&display=swap');
 
-header span {
-    font-family: Acme;
-    font-size: 40px;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+}
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
+    font-family: "Lato", sans-serif;
+}
+
+
+
+/* ----------------- Navbar ------------------ */
+
+.navbar-brand {
+    background-color: deepskyblue;
+    border-radius: 50%;
+    font-family: "Acme", sans-serif;
+    font-size: 28px;
+    margin-left: 6px;
+    padding: 10px 12px 8px;
+}
+
+.nav-link {
+    margin-left: 4px;
+    margin-right: 4px;
+    font-family: "Lato", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.dropdown-menu {
+    left: -12px;
+}
+
+
+/* ----------------- Hero & Callout ------------------ */
+
+.hero-container { 
+  background: url("../img/homepage2.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+}
+
+.jumbotron {
+    background-color: transparent;
+}
+
+
+.prt-container {
+    width:100%;
+    height: 50vh;
+    background-color: transparent;
+    bottom: 0; 
+}
+
+#prt-explain {
+    height: 90%;
+    width: 50%;
+    margin: 0 auto;
+}
+
+
+
+
+/* ----------------- Footer ------------------ */
+
+
+.footer-bar {
+    background-color: bisque;
+    min-height: 120px;
+}
+
+.social-media, 
+.copyright {
+    text-align: center;
 }
