--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
+    font-size: 18px;
 }
 
 h1, 
@@ -13,19 +14,28 @@ h4,
 h5, 
 h6 {
     font-family: "Lato", sans-serif;
+    padding-bottom: 16px;
+    text-align: center;
 }
 
 
 
 /* ----------------- Navbar ------------------ */
 
+.navbar {
+	background-color: #ffe4c4;
+}
+
 .navbar-brand {
-    background-color: deepskyblue;
-    border-radius: 50%;
     font-family: "Acme", sans-serif;
     font-size: 28px;
     margin-left: 6px;
-    padding: 10px 12px 8px;
+    padding: 6px;
+    border-radius: 60%;
+}
+
+.navbar-brand:hover {
+    background-color: #b8a690;
 }
 
 .nav-link {
@@ -57,18 +67,21 @@ h6 {
 }
 
 .jumbotron {
-    background-color: transparent;
+    background-color: rgba(255,228,196,0.6);
     text-align: center;
-    margin-top: 40px;
+    margin-top: 80px;
+    padding-top: 16px;
+    padding-bottom: 20px;
+    border-radius: 8px;
 }
 
 .jumbotron h1 {
     font-family: "Acme", sans-serif;
+    padding: 0;
 }
 
 .jumbotron p {
-    padding-top: 10px;
-    padding-bottom: 16px;
+    padding-bottom: 6px;
     font-size: 24px;
     font-weight: 400;
 }
@@ -79,9 +92,13 @@ h6 {
 }
 
 #prt-intro {
+    background-color: rgba(255,228,196,0.6);
     margin: 0 auto;
-    max-width: 620px;
+    /*max-width: 90%;*/
+    padding: 32px 40px;
+    border-radius: 8px;
 }
+
 
 
 
@@ -91,7 +108,7 @@ h6 {
 
 
 .footer-bar {
-    background-color: bisque;
+    background-color: #ffe4c4;
     min-height: 120px;
 }
 
