--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,50 @@ h6 {
     margin: 6px;
 }
 
+.timetable-day p {
+    margin-bottom: 6px;
+}
+
+
+/* ----------------- About ------------------ */
+
+.about-container { 
+    background: url("../img/about.jpg") no-repeat top center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    padding:12px;
+    min-height:1200px;
+}
+
+.about-us {
+    background-color: rgba(255,228,196,0.6);
+    border-radius: 8px;
+    margin: 12px;
+    padding: 16px;
+}
+
+
+.about-jane,
+.about-john,
+.learn-more {
+    background-color: rgba(154, 136, 114,0.6);
+    margin: 12px;
+    padding: 16px;
+    border-radius: 8px;
+}
+
+
+
+.about-jane h4, 
+.about-john h4 {
+   padding: 12px;
+}
+
+.learn-more p {
+    text-align: center;
+}
 /* ----------------- Footer ------------------ */
 
 
