fixed section/row widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ h6 {
 .jumbotron {
     background-color: rgba(255,228,196,0.6);
     text-align: center;
-    margin-top: 16px;
+    margin-top: 30vh;;
     padding-top: 16px;
     padding-bottom: 20px;
     border-radius: 8px;
@@ -115,7 +115,7 @@ h6 {
     padding-bottom: 18px;
 }
 
-.offer-container {
+#offer {
     background-color: rgba(255,228,196,0.6);
     border-radius: 8px;
     padding: 16px 24px;
@@ -141,7 +141,7 @@ h6 {
     border-radius: 8px;
 }
 
-.map-container {
+#map-container {
     background-color: rgba(255,228,196,0.6);
     padding: 12px;
     border-radius: 8px;
@@ -152,10 +152,10 @@ h6 {
    margin: auto auto;
 }
 
-.timetable-container {
+#timetable-container {
     background-color: rgba(255,228,196,0.6);
     border-radius: 8px;
-    margin: 16px auto;
+    margin: 16px 4px;
     padding: 18px;
 }
 
@@ -164,12 +164,18 @@ h6 {
     text-align: center;
     border-radius: 8px;
     margin: 6px;
+    padding-top: 12px;
 }
 
 .timetable-day p {
+    padding-top: 6px;
     margin-bottom: 6px;
 }
 
+.timetable-day hr {
+    border-bottom: 1px solid #4a4a4f;
+    width:50%;
+}
 
 /* ----------------- About ------------------ */
 
