--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,8 @@ h6 {
 
 /* ----------------- Hero & Callout ------------------ */
 
+
+
 .hero-container { 
   background: url("../img/homepage2.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -68,7 +70,7 @@ h6 {
 .jumbotron {
     background-color: rgba(255,228,196,0.6);
     text-align: center;
-    margin-top: 30vh;;
+    margin-top: 1vh;;
     padding-top: 16px;
     padding-bottom: 20px;
     border-radius: 8px;
@@ -86,8 +88,8 @@ h6 {
 }
 
 #prt-container {
-    height: 100vh;
     padding-top: 100px;
+    margin-bottom: 50vh;
 }
 
 #prt-intro {
@@ -177,6 +179,75 @@ h6 {
     width:50%;
 }
 
+
+/* ----------------- Contact ------------------ */
+
+.contact-container {
+    background: url("../img/contact.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    min-height: 760px;
+}
+
+.contact-options {
+    background-color: rgba(255,228,196,0.6);
+    border-radius: 8px;
+    margin-top: 10vh; 
+    padding-top: 18px;
+    padding-bottom: 32px;
+}
+
+.btn--outer-frame {
+    background-color: rgba(154, 136, 114,0.2);
+    height: 220px;
+    width: 220px;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.btn--outer-frame a {
+    text-decoration: none;
+}
+
+.btn--button {
+    background-color: rgba(255,228,196,0.6);
+    height: 200px;
+    width: 200px;
+    border-radius: 8px;
+    padding: 18px;
+}
+
+.btn--button:hover {
+    background-color: rgba(255,228,196,0.8);
+    text-decoration: none;
+    color: bisque;
+}
+
+
+
+
+.btn--text,
+.btn--icon {
+    display: block;
+    text-align: center;
+    color: #4a4a4f;
+}
+
+.btn--icon {
+    font-size: 72px;
+    padding-top: 20px;
+}
+
+.btn--text {
+    font-size: 26px;
+}
+
+
+
 /* ----------------- About ------------------ */
 
 .about-container { 
@@ -206,16 +277,25 @@ h6 {
     border-radius: 8px;
 }
 
-
-
 .about-jane h4, 
 .about-john h4 {
-   padding: 12px;
+   padding-top: 16px;
 }
+
+.jane-image img,
+.john-image img {
+    height: 90%;
+    width: 100%;
+    border-radius: 8px; 
+    margin-top: 5%;
+}
+
 
 .learn-more p {
     text-align: center;
 }
+
+
 /* ----------------- Footer ------------------ */
 
 
