--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ h6 {
 .jumbotron {
     background-color: rgba(255,228,196,0.6);
     text-align: center;
-    margin-top: 1vh;;
+    margin-top: 18px;
     padding-top: 16px;
     padding-bottom: 20px;
     border-radius: 8px;
@@ -121,7 +121,6 @@ h6 {
     background-color: rgba(255,228,196,0.6);
     border-radius: 8px;
     padding: 16px 24px;
-    margin: 0 auto;
 }
 
 .trg i {
@@ -147,7 +146,7 @@ h6 {
     background-color: rgba(255,228,196,0.6);
     padding: 12px;
     border-radius: 8px;
-    margin: 16px auto 0;
+    margin-top: 16px;
 }
 
 .location-info {
@@ -157,7 +156,7 @@ h6 {
 #timetable-container {
     background-color: rgba(255,228,196,0.6);
     border-radius: 8px;
-    margin: 16px 4px;
+    margin-top: 16px;
     padding: 18px;
 }
 
@@ -203,10 +202,10 @@ h6 {
 
 .btn--outer-frame {
     background-color: rgba(154, 136, 114,0.2);
-    height: 220px;
-    width: 220px;
+    height: 210px;
+    width: 210px;
     border-radius: 8px;
-    padding: 10px;
+    padding: 5px;
 }
 
 .btn--outer-frame a {
