--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,19 @@ h6 {
     width:50%;
 }
 
+.timetable-important p {
+    background-color: 	rgba(154, 136, 114,0.7);
+    margin-top: 24px;
+    padding: 12px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.trg-more-info a,
+.timetable-important a,
+.learn-more a {
+    color: rgb(68, 92, 92);
+}
 
 /* ----------------- Contact ------------------ */
 
