--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,17 +112,35 @@ h6 {
     font-weight: 400;
 }
 
+.gallery img {
+    border-radius: 8px;
+    max-width: 100%;
+    margin-bottom: 24px;
+}
+
 #prt {
     padding-top: 100px;
+    padding-bottom: 16px;
 }
 
 .prt-intro {
     margin: 0 auto;
-    padding: 32px 40px;
+    padding: 24px;
+    background-color: rgba(255,228,196,0.8);
+}
+
+.prt-intro p {
+    margin-top: 24px;
+    font-size: 20px;
+}
+
+#motto {
+    text-align: center;
 }
 
 .prt-intro span {
-   margin-top: 24px;
+   margin-top: 50px;
+   margin-bottom: 20px;
    display: block;
    text-align: center;
 }
@@ -278,13 +296,13 @@ h6 {
 
 .about-us {
     margin: 12px;
-    padding: 16px;
+    padding: 16px 8px 8px;
 }
 
 .about-jane,
 .about-john,
 .learn-more {
-    margin: 12px;
+    margin: 8px;
     padding: 16px;
 }
 
@@ -296,8 +314,8 @@ h6 {
 
 .jane-image img,
 .john-image img {
-    height: 90%;
-    width: 100%;
+    height: 95%;
+    width: 95%;
     border-radius: 8px; 
     margin-top: 12px;
 }
