--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ h6 {
 
 /* ----------------- Hero & Callout ------------------ */
 
+/*--- "Perfect background image" code snippet copied from CSS-Tricks.com and used for all background images ---*/
 .hero-container { 
   background: url("../img/homepage2.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -231,13 +232,13 @@ h6 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    padding-top: 18px;
+    padding-top: 36px;
     padding-bottom: 18px;
     min-height: 85vh;
 }
 
 .contact-options {
-    margin-top: 10vh; 
+    margin-bottom: 25vh; 
     padding-top: 18px;
     padding-bottom: 32px;
 }
@@ -248,6 +249,7 @@ h6 {
     width: 210px;
     border-radius: 8px;
     padding: 5px;
+    margin-bottom: 12px;
 }
 
 .btn--outer-frame a {
