--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ h6 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 2500px;
+  padding-top: 16px;
 }
 
 .jumbotron-container {
@@ -105,7 +105,6 @@ h6 {
 
 .jumbotron {
     text-align: center;
-    margin-top: 18px;
     padding-top: 16px;
     padding-bottom: 20px;
 }
@@ -153,7 +152,6 @@ h6 {
    display: block;
    text-align: center;
 }
-
 
 /* ----------------- Training ------------------ */
 
@@ -231,7 +229,6 @@ h6 {
     text-align: center;
 }
 
-
 /* ----------------- Contact ------------------ */
 
 .contact-container {
@@ -240,13 +237,12 @@ h6 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    padding-top: 36px;
-    padding-bottom: 18px;
+    padding-top: 20vh;
+    padding-bottom: 5vh;
     min-height: 85vh;
 }
 
 .contact-options {
-    margin-bottom: 25vh; 
     padding-top: 18px;
     padding-bottom: 32px;
 }
@@ -305,8 +301,7 @@ h6 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    padding:12px;
-    min-height:1200px;
+    padding: 18px;
 }
 
 .about-us {
@@ -319,8 +314,6 @@ h6 {
     margin: 0px 8px 24px;
     padding: 24px 8px;
 }
-
-
 
 .about-jane h4, 
 .about-john h4 {
@@ -376,7 +369,7 @@ h6 {
 }
 
 .copyright {
-    margin-bottom: 5px;
+    margin-bottom: 16px;
     letter-spacing: 1px;
 }
 
