--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,22 +350,21 @@ h6 {
 }
 
 .social-link {
-    height: 40px;
-    width: 40px;
     margin: 0px 15px 5px;
-    
-}
-
-.social-link:hover {
-    background-color: #e7d2b7;
-    border-radius: 8px;
 }
 
 .social-link a i {
+    height: 40px;
+    width: 40px;
+    border-radius: 8px;
     color: #4a4a4f;
     font-size: 24px;
     line-height: 38px;
     text-align: center;
+}
+
+.social-link a i:hover {
+    background-color: #e7d2b7;
 }
 
 .copyright {
